@@ -7813,7 +7813,7 @@ void ClientSession::sendServerStats(UINT32 dwRqId)
 	msg.setField(VID_NUM_NODES, (UINT32)g_idxNodeById.size());
 
    // Client sessions
-   msg.setField(VID_NUM_SESSIONS, (UINT32)GetSessionCount());
+   msg.setField(VID_NUM_SESSIONS, (UINT32)GetSessionCount(true));
 
    // Alarms
    GetAlarmStats(&msg);
