@@ -5,6 +5,7 @@
 - Fixed broken instance discovery filters
 - Fixed agent crash when collecting SNMP data in cached mode
 - Agent returns correct OS version on Windows 10
+- New NXSL "Node" class attribute: bridgeBaseAddress
 - Fixed issues: #831, #852, #890, #892
 
 
